# Momo

./: .gitattributes  .gitignore  README.md  momo.py  parser.py  pyproject.toml  run.py  test.py
tableaux/core/: closure.py  cycles.py  eventualities.py  node.py  rules.py  tableau.py
tableaux/debugging/: path.py  traces.py  traces_copy.py
tableaux/improvemets/: closed_nodes.py  sat_solver.py  subsumption.py
tableaux/preproccesing/: process_formula.py  syntax_parser.py
tableaux/tl_basics/: formula.py  tl_frozenset.py  tl_set.py  tl_set_copy.py
tableaux/utils/: multiset.py  recursionlimit.py
test/: generate_antiblack.py
test/TTM-Set-Examples/: sat1.txt  sat10.txt  sat11.txt  sat12.txt  sat13.txt  sat14.txt  sat2.txt  sat3.txt  sat4.txt  sat5.txt  sat6.txt  sat7.txt  sat8.txt  sat9.txt  unsat-test.txt  unsat1.txt  unsat10.txt  unsat11.txt  unsat12.txt  unsat13.txt  unsat14.txt  unsat15.txt  unsat16.txt  unsat17.txt  unsat2.txt  unsat3.txt  unsat4 - Copy.txt  unsat4-tiny.txt  unsat4-tiny2.txt  unsat4.txt  unsat5.txt  unsat6.txt  unsat7.txt  unsat8.txt  unsat9-tiny.txt  unsat9.txt
test/antiblack/: O1formula0_modified.pltl  O1formula1000_modified.pltl  O1formula100_modified.pltl  O1formula101_modified.pltl  O1formula102_modified.pltl  O1formula103_modified.pltl  O1formula104_modified.pltl  O1formula105_modified.pltl  O1formula106_modified.pltl  O1formula107_modified.pltl  O1formula108_modified.pltl  O1formula109_modified.pltl  O1formula10_modified.pltl  (+988 more)
test/test/: t2.txt  (+7 more)
tests/: test_branch.py  test_closure.py  test_sat_solver.py  test_tableau.py  test_tl.py
(+2446 files in other folders)
